--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@remix-run/react": "^0.20.1",
+    "@remix-run/serve": "^0.20.1",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6.0.0-beta.8",
-    "remix": "^0.20.1",
-    "@remix-run/serve": "^0.20.1"
+    "remix": "^0.20.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^0.20.1"
